--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/three@0.126.0/build/three.js"></script>
     <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
 
-    <script src="./main.js"></script>
+    <script src="./template.js"></script>
 </head>
 
 <body>
