--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Hello WebXR!</title>
 
+    <!--ThreeJS and GLTFLoader of ThreeJS-->
     <script src="https://unpkg.com/three@0.126.0/build/three.js"></script>
     <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
-
-    <script src="./template.js"></script>
+ 
+    <!--Main JavaScript File that contains activateXR function-->
+    <script src="./main.js"></script>
 </head>
 
 <body>
